--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <h1>Hello, Galera!</h1>
         <script src="script.js"></script>
     </body>
 </html>
